--- a/styles.css
+++ b/styles.css
@@ -280,7 +280,6 @@ body {
   align-items: center;
   right: 0;
   bottom: 0;
-  height: 230px;
   margin: 0 50px 20px 0;
 }
 
@@ -291,9 +290,9 @@ body {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-.scroll-distance {
+.scroll-inner-length {
   display: block;
-  height: 50px;
+  margin-top: 0px;
   width: 3px;
   background-color:white;
 }
